--- a/ai.html
+++ b/ai.html
@@ -605,7 +605,7 @@
             <div class="sidebar-menu">
                 <li id="newChatButton">
                     <img src="https://cdn.jsdelivr.net/npm/lucide-static@latest/icons/plus-circle.svg" alt="새 채팅">
-                    <span>쑥쑥이티비</span>
+                    <span>새 채팅</span>
                 </li>
             </div>
         </div>
