--- a/ai.html
+++ b/ai.html
@@ -508,8 +508,8 @@
         .menu-button {
             display: none; /* Hidden by default on PC */
             position: fixed;
-            top: 10px;
-            left: 10px;
+            top: 15px; /* Adjusted position */
+            left: 15px; /* Adjusted position */
             background-color: #fff;
             border: 1px solid #ccc;
             border-radius: 5px;
